Added comments package
Included in example

--- a/example.tex
+++ b/example.tex
@@ -5,6 +5,12 @@
 \usepackage{csquotes}
 \usepackage[english]{babel}
 
+% Useful package bundled along with this class
+% to add person-specific comments (using todonotes)
+\usepackage{comments}
+% Define author names
+\newauthor[Mgw]{Mark}{red}
+
 
 \addbibresource{references.bib}
 
