Added todolist to example

--- a/example.tex
+++ b/example.tex
@@ -163,6 +163,11 @@ section~\ref{sec:example subsection}. Use the same method for referring
 to figures, like fig.~\ref{fig:place}.
 
 
+% Shows all the todos in the document
+% Remove this before submission!
+\listoftodos{}
+
+
 
 % Show the bibliography at the end
 \newpage
